<resources>
    <string name="app_name">BMI-okolo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Add BMI Details</string>
    <string name="second_fragment_label">BMI Details</string>

    <string name="add_personal_details">Enter Personal Detail</string>
    <string name="name">Name</string>
    <string name="calculate_bmi_text">Calculate Your Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="calculate">Calculate</string>
    <string name="body_mass_index_text">BODY MASS INDEX</string>
    <string name="default_bmi_value">18.61</string>
    <string name="default_index_category">HELLO OLIVIA , YOU ARE NORMAL</string>
    <string name="default_extra_note">Normal BMI range: 18.5kg/m2 – 25kg/m2</string>
    <string name="default_ponderal_note">Ponderal Index: 10.64kg/m3</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="blank_name">name cannot be blank</string>
    <string name="ad_not_loaded">Ad was not loaded</string>
    <string name="native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ad_not_loaded">Failed to load Native Ads</string>
    <string name="intent_extra_text">This is my BMI. Do you want to check yours</string>
    <string name="intent_title">Share With</string>
    <string name="default_uri">http://play.google.com/store/apps/details?id=</string>
    <string name="underweight_text">Underweight BMI range: 1.0kg/m2 – 18.49kg/m2</string>
    <string name="normal_weight_text">Normal BMI range: 18.5kg/m2 – 25kg/m2</string>
    <string name="overweight_text">Overweight BMI range: 25.0kg/m2 – 29.9kg/m2</string>
    <string name="obesity_text">Obesity BMI range: 30.0kg/m2 - higher</string>
    <string name="no_available_app">No App Available</string>
    <string name="underweight_result">Hello %s, You are Underweight</string>
    <string name="normal_result">Hello  %s, You are Normal</string>
    <string name="overweight_result">Hello  %s, You are Overweight</string>
    <string name="obese_result">Hello  %s, You are Obese</string>
    <string name="ponderal_text">Ponderal Index:  %sKg/m3</string>
    <string name="uri_string">market://details?id=</string>
    <string name="authority_provider">.provider</string>
    <string name="file_share">FilShare</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>