<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BmiDetails">

    <androidx.cardview.widget.CardView
        style="@style/match_wrap"
        android:layout_above="@id/my_template"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_90dp"
        android:layout_marginBottom="@dimen/_36dp">

        <LinearLayout
            style="@style/match_wrap"
            android:background="@drawable/gradient_background"
            android:orientation="vertical">

            <View
                style="@style/Divider"
                android:layout_marginTop="45dp" />

            <TextView style="@style/body_mass_index" />

            <View
                style="@style/Divider"
                android:layout_marginTop="6dp" />

            <TextView style="@style/body_mass_index_value" />

            <View
                style="@style/Divider"
                android:layout_marginStart="@dimen/_43dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/_43dp" />

            <TextView style="@style/hello_name_results" />

            <TextView
                style="@style/bmi_category_description"
                android:layout_marginTop="15dp"
                android:text="@string/default_extra_note" />


            <com.google.android.material.textview.MaterialTextView
                style="@style/bmi_category_description"
                android:text="@string/default_ponderal_note" />

            <LinearLayout
                style="@style/match_wrap"
                android:layout_marginTop="@dimen/_29dp"
                android:layout_marginBottom="@dimen/_29dp"
                android:gravity="center">

                <Button
                    style="@style/share_rate_material_button"
                    android:text="@string/share"
                    app:icon="@drawable/ic_share_icon" />

                <Button
                    style="@style/share_rate_material_button"
                    android:layout_marginEnd="33dp"
                    android:text="@string/rate"
                    app:icon="@drawable/ic_star_icon" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/my_template"
        style="@style/match_wrap"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        app:gnt_template_type="@layout/gnt_small_template_view" />

</RelativeLayout>